[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "spotify-profile-analyzer"
version = "0.0.3"
description = "A Python project that provides analytics for a user's Spotify profile."
authors = ["W T"]

[tool.poetry.dependencies]
python = "^3.10"
urwid = "^2.3.4"
spotipy = "^2.23.0"
python-dotenv = "^1.0.0"
